# hackthon_phase3

./: .gitignore  CLAUDE.md  PRIORITY_FEATURE_IMPLEMENTATION.md  README.md  requirements.txt  settings.py  test_dotenv.py  test_settings.py  test_token.py
.claude/agents/: api-designer.md  auth-security-agent.md  conversation-memory-agent.md  database-architect.md  fastapi-backend-engineer.md  frontend-nextjs-engineer.md  (+7 more)
backend/: .env.example  check_key.py  create_tables.py  create_users_table.py  generate_test_token.py  pyproject.toml  requirements.txt  ruff.toml  test_greeting_fix.py  test_openrouter_config.py  validate_implementation.py
backend/migrations/: 001_initial_tasks.py  002_create_users_table.py  003_add_priority_to_tasks.py
backend/src/: __init__.py  db.py  main.py
backend/src/agents/: todo_orchestrator.py
backend/src/agents/tools/: add_task_tool.py  complete_task_tool.py  delete_task_tool.py  list_tasks_tool.py  update_task_tool.py
backend/src/api/: dependencies.py
backend/src/api/routes/: auth.py  chat.py  tasks.py
backend/src/models/: __init__.py  conversation.py  task.py  user.py
backend/src/repositories/: __init__.py  conversation_repository.py  task_repository.py
backend/src/services/: auth_service.py  conversation_service.py  task_service.py
backend/tests/: conftest.py  test_tasks_api.py
backend/tests/unit/: test_agent_tools.py
backend/testss/: test_orchestrator_key.py
docs/: ai-chatbot.md
frontend/: .env.local  .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+179 files in other folders)
